# LibDylanRT

./: CMakeLists.txt  main.cu
Display/: PixelDisplay.cu  PixelDisplay.cuh
MainArchive/: RenderEdges.txt
Model/: TrigModel.cu  TrigModel.cuh
Model/TinyGLTF/: json.hpp  stb_image.h  stb_image_write.h  tiny_gltf.h
Renderer/: CameraFrame.cu  CameraFrame.cuh  PhongShading.cu  PhongShading.cuh  Transform.cu  Transform.cuh  UtilFunctions.cu  UtilFunctions.cuh  VertexRenderer.cu  VertexRenderer.cuh
